--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,6 +52,8 @@ jobs:
       - uses: ./.github/actions/docker
         with:
           working-directory: apps/api
+          user: ${{ secrets.DOCKER_REGISTRY_USER }}
+          pass: ${{ secrets.DOCKER_REGISTRY_PASS }}
 
   # build_web:
   #   runs-on: ubuntu-22.04
