--- a/.github/workflows/npm-test-publish.yml
+++ b/.github/workflows/npm-test-publish.yml
@@ -1,10 +1,10 @@
 name: Test and publish
 
-on:
-  push:
-    branches: [ master, beta ]
-  release:
-    types: [ created ]
+# on:
+#   push:
+#     branches: [ master, beta ]
+#   release:
+#     types: [ created ]
 
 jobs:
   test:
