--- a/.github/workflows/npm-test.yml
+++ b/.github/workflows/npm-test.yml
@@ -1,10 +1,10 @@
 name: Test
 
-on:
-  push:
-    branches: [ develop ]
-  pull_request:
-    types: [opened, reopened]
+# on:
+#   push:
+#     branches: [ develop ]
+#   pull_request:
+#     types: [opened, reopened]
 
 jobs:
   test:
