--- a/.github/actions/docker-utils-before-script/action.yml
+++ b/.github/actions/docker-utils-before-script/action.yml
@@ -1,5 +1,10 @@
 name: "Prepare docker utils before deploy"
 description: "Prepare docker utils before deploy"
+inputs:
+  registry:
+    description: 'Docker registry'
+    required: true
+    default: ''
 
 runs:
   using: "composite"
@@ -26,7 +31,7 @@ runs:
       shell: bash
     - run: if [ -z "$DOCKER_REGISTRY_PASS" ]; then echo 'DOCKER_REGISTRY_PASS=${{ env.CI_REGISTRY_PASSWORD }}' >> "$GITHUB_ENV"; fi
       shell: bash
-    - run: if [ -z "$DOCKER_REGISTRY" ]; then echo 'DOCKER_REGISTRY=${{ vars.DOCKER_REGISTRY }}' >> "$GITHUB_ENV"; fi
+    - run: if [ -z "$DOCKER_REGISTRY" ]; then echo 'DOCKER_REGISTRY=${{ inputs.registry }}' >> "$GITHUB_ENV"; fi
       shell: bash
     - run: if [ -z "$DOCKER_REGISTRY_PATH" ]; then echo 'DOCKER_REGISTRY_PATH=${{ env.CI_PROJECT_PATH }}' >> "$GITHUB_ENV"; fi
       shell: bash
