--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,12 +49,29 @@ jobs:
           path: apps/api
       - name: unzip artifact for deployment
         run: unzip -q release.zip && rm release.zip
-      - uses: ./.github/actions/docker
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v2
         with:
-          working-directory: apps/api
-          user: ${{ secrets.DOCKER_REGISTRY_USER }}
-          pass: ${{ secrets.DOCKER_REGISTRY_PASS }}
           registry: ${{ vars.DOCKER_REGISTRY }}
+          username: ${{ secrets.DOCKER_REGISTRY_USER }}
+          password: ${{ secrets.DOCKER_REGISTRY_PASS }}
+      -
+        name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          context: apps/api
+          push: true
+          tags: "${{ vars.DOCKER_REGISTRY }}/${DOCKER_REGISTRY_PATH}/api:${GITHUB_SHA::7}"
+      # - uses: ./.github/actions/docker
+      #   with:
+      #     working-directory: apps/api
+      #     user: ${{ secrets.DOCKER_REGISTRY_USER }}
+      #     pass: ${{ secrets.DOCKER_REGISTRY_PASS }}
+      #     registry: ${{ vars.DOCKER_REGISTRY }}
 
   # build_web:
   #   runs-on: ubuntu-22.04
