--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,31 @@ jobs:
         with:
           name: api
           path: apps/api/release.zip
+
+  build_web:
+    defaults:
+      run:
+        shell: bash
+        working-directory: apps/web
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '19.5.0'
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8.1.0
+      - uses: ./.github/actions/utils-before
+      - run: pnpm install
+      - run: pnpm build
+      - run: pnpm -F "." deploy .release
+      - name: Zip artifact for deployment
+        run: zip -q release.zip ./.release ./lib -r
+      - uses: actions/upload-artifact@master
+        with:
+          name: web
+          path: apps/web/release.zip
     
   docker_api:
     needs: build_api
@@ -62,29 +87,44 @@ jobs:
           username: ${{ secrets.DOCKER_REGISTRY_USER }}
           password: ${{ secrets.DOCKER_REGISTRY_PASS }}
       -
-        name: Build and push
+        name: Build and push api
         uses: docker/build-push-action@v4
         with:
           context: apps/api
           push: true
           tags: "${{ vars.DOCKER_REGISTRY }}/${{ env.DOCKER_REGISTRY_PATH }}/api:${{ env.SHORT_SHA }}"
-      # - uses: ./.github/actions/docker
-      #   with:
-      #     working-directory: apps/api
-      #     user: ${{ secrets.DOCKER_REGISTRY_USER }}
-      #     pass: ${{ secrets.DOCKER_REGISTRY_PASS }}
-      #     registry: ${{ vars.DOCKER_REGISTRY }}
 
-  # build_web:
-  #   runs-on: ubuntu-22.04
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - uses: actions/setup-node@v3
-  #       with:
-  #         node-version: '20.2.0'
-  #     - uses: pnpm/action-setup@v2
-  #       with:
-  #         version: 8.1.0
-  #     - run: pnpm install
-  #     - run: pnpm build
-  #     - run: pnpm -F "." deploy .release
+  docker_web:
+    needs: build_web
+    defaults:
+      run:
+        shell: bash
+        working-directory: apps/web
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: actions/checkout@v2
+      - name: Add SHORT_SHA env property with commit short sha
+        run: echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
+      - uses: actions/download-artifact@master
+        with:
+          name: web
+          path: apps/web
+      - name: unzip artifact for deployment
+        run: unzip -q release.zip && rm release.zip
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          registry: ${{ vars.DOCKER_REGISTRY }}
+          username: ${{ secrets.DOCKER_REGISTRY_USER }}
+          password: ${{ secrets.DOCKER_REGISTRY_PASS }}
+      -
+        name: Build and push web
+        uses: docker/build-push-action@v4
+        with:
+          context: apps/web
+          push: true
+          tags: "${{ vars.DOCKER_REGISTRY }}/${{ env.DOCKER_REGISTRY_PATH }}/web:${{ env.SHORT_SHA }}"
