--- a/package.json
+++ b/package.json
@@ -2,29 +2,33 @@
   "name": "kit3-root",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "author": "isuvorov",
   "scripts": {
     "start": "node lib",
-    "build": "lsk run build",
-    "debug": "DEBUG=lsk concurrently -k npm:dev:*",
     "dev": "concurrently -k npm:dev:*",
+    "build": "lsk run build",
+    "test": "echo ok",
+    "prepack": "        lsk run prepack",
+    "release": "        lsk run release",
+    "debug": "DEBUG=lsk concurrently -k npm:dev:*",
+    "dev:tdl": "cd apps/tdl && npm run dev",
     "dev:api": "cd apps/api && npm run dev",
-    "dev:web": "cd apps/web && npm run dev",
-    "test": "echo ok"
+    "dev:web": "cd apps/web && npm run dev"
   },
-  "keywords": [],
-  "author": "isuvorov",
-  "license": "ISC",
   "devDependencies": {
-    "@lskjs/cli-scripts": "^3.5.3",
-    "@lskjs/cli-utils": "^3.5.3",
+    "@lskjs/cli-scripts": "^3.11.0",
+    "@lskjs/cli-utils": "^3.11.0",
+    "@lskjs/eslint-config": "^3.11.0",
+    "@lskjs/jest-config": "^3.11.0",
+    "@lskjs/tsconfig": "^3.11.0",
     "concurrently": "^8.2.0",
-    "lsk": "^3.5.3",
-    "nodemon": "^3.0.1"
+    "lsk": "^3.11.0",
+    "nodemon": "^3.0.1",
+    "typescript": "^5.1.6"
   },
+  "//": "///////////========================/////////========================/////////========================/////////",
   "prettier": "@lskjs/eslint-config/prettier",
   "eslintConfig": {
-    "extends": "@lskjs/eslint-config",
     "settings": {
       "import/resolver": {
         "typescript": {
@@ -34,6 +38,15 @@
           ]
         }
       }
-    }
-  }
+    },
+    "extends": "@lskjs/eslint-config"
+  },
+  "jest": {
+    "preset": "@lskjs/jest-config"
+  },
+  "main": "index.js",
+  "///": "//////////========================/////////========================/////////========================/////////",
+  "license": "ISC",
+  "keywords": [],
+  "////": "/////////========================/////////========================/////////========================/////////"
 }
