--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -2,22 +2,52 @@
   "name": "kit3-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "author": "Igor Suvorov <hi@isuvorov.com> (https://github.com/isuvorov)",
+  "private": true,
   "scripts": {
-    "start": "node lib --kit3/apps/api",
-    "build": "cp -R ./src ./lib && echo ok",
-    "test": "echo ok",
-    "dev": "node src"
+    "start": "        node lib --alfred/apps/api",
+    "dev": "          lsk run dev",
+    "build": "        lsk run build",
+    "test": "         lsk run test",
+    "prepack": "      lsk run prepack",
+    "release": "      lsk run release"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "@lskjs/env": "^3.11.0",
+    "@nestjs/common": "^10.0.0",
+    "@nestjs/core": "^10.0.0",
+    "@nestjs/platform-express": "^10.0.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.1"
+  },
+  "devDependencies": {
+    "@nestjs/cli": "^10.0.0",
+    "@nestjs/microservices": "^10.1.3",
+    "@nestjs/schematics": "^10.0.2",
+    "@nestjs/testing": "^10.0.0",
+    "@swc/core": "^1.3.75",
+    "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.2",
+    "@types/node": "^20.3.1",
+    "@types/supertest": "^2.0.12",
+    "source-map-support": "^0.5.21",
+    "supertest": "^6.3.3"
+  },
+  "//": "///////////========================/////////========================/////////========================/////////",
+  "prettier": "@lskjs/eslint-config/prettier",
+  "eslintConfig": {
+    "extends": "@lskjs/eslint-config"
+  },
+  "jest": {
+    "preset": "@lskjs/jest-config"
   },
   "files": [
     "lib",
+    "files",
     "Dockerfile",
     "docker-stack.yml"
-  ]
+  ],
+  "///": "//////////========================/////////========================/////////========================/////////",
+  "license": "UNLICENSED",
+  "////": "/////////========================/////////========================/////////========================/////////"
 }
