fix: dockerize next.js

--- a/deploy/.gitlab-ci.yml
+++ b/deploy/.gitlab-ci.yml
@@ -51,8 +51,8 @@ build_web:
     CWD: apps/web
   script:
     - pnpm install
-    - pnpm build
     - pnpm -F "." deploy .release
+    - cd .release && pnpm build
     
 docker_api:
   extends:
