--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,14 @@
-name: CI
+name: CI-action
 on:
   push:
     branches:
-      - "master"
+      - "action"
 
 env:
-  DOCKER_REGISTRY_PATH: kit
+  ECS_TD: .github/workflows/td.json
+  AWS_REGION: eu-west-1
+  ECR_REPOSITORY: chatterfy
+
 
 jobs:
   build_api:
@@ -78,20 +81,43 @@ jobs:
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      -
-        name: Login to Docker Hub
-        uses: docker/login-action@v2
+      # -
+      #   name: Login to Docker Hub
+      #   uses: docker/login-action@v2
+      #   with:
+      #     registry: ${{ vars.DOCKER_REGISTRY }}
+      #     username: ${{ secrets.DOCKER_REGISTRY_USER }}
+      #     password: ${{ secrets.DOCKER_REGISTRY_PASS }}
+      # -
+      #   name: Build and push api
+      #   uses: docker/build-push-action@v4
+      #   with:
+      #     context: apps/api
+      #     push: true
+      #     tags: "${{ vars.DOCKER_REGISTRY }}/${{ env.DOCKER_REGISTRY_PATH }}/api:${{ env.SHORT_SHA }}"
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
         with:
-          registry: ${{ vars.DOCKER_REGISTRY }}
-          username: ${{ secrets.DOCKER_REGISTRY_USER }}
-          password: ${{ secrets.DOCKER_REGISTRY_PASS }}
-      -
-        name: Build and push api
-        uses: docker/build-push-action@v4
-        with:
-          context: apps/api
-          push: true
-          tags: "${{ vars.DOCKER_REGISTRY }}/${{ env.DOCKER_REGISTRY_PATH }}/api:${{ env.SHORT_SHA }}"
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+
+      - name: Login to Amazon ECR
+        id: login-ecr
+        run: |
+          aws ecr get-login-password --region ${{ env.AWS_REGION }} | docker login --username AWS --password-stdin 062467975640.dkr.ecr.eu-west-1.amazonaws.com
+
+      - name: Build and tag Docker image
+        run: |
+          docker build -t 062467975640.dkr.ecr.eu-west-1.amazonaws.com/chatterfy:api-${{ github.sha }} .
+          docker tag 062467975640.dkr.ecr.eu-west-1.amazonaws.com/chatterfy:${{ github.sha }} 062467975640.dkr.ecr.eu-west-1.amazonaws.com/chatterfy:api-latest
+
+      - name: Push Docker image to ECR
+        run: |
+          docker push 062467975640.dkr.ecr.eu-west-1.amazonaws.com/chatterfy:api-${{ github.sha }}
+          docker push 062467975640.dkr.ecr.eu-west-1.amazonaws.com/chatterfy:api-latest
+
+
 
   docker_web:
     needs: build_web
@@ -113,53 +139,74 @@ jobs:
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      -
-        name: Login to Docker Hub
-        uses: docker/login-action@v2
+      # -
+      #   name: Login to Docker Hub
+      #   uses: docker/login-action@v2
+      #   with:
+      #     registry: ${{ vars.DOCKER_REGISTRY }}
+      #     username: ${{ secrets.DOCKER_REGISTRY_USER }}
+      #     password: ${{ secrets.DOCKER_REGISTRY_PASS }}
+      # -
+      #   name: Build and push web
+      #   uses: docker/build-push-action@v4
+      #   with:
+      #     context: apps/web
+      #     push: true
+      #     tags: "${{ vars.DOCKER_REGISTRY }}/${{ env.DOCKER_REGISTRY_PATH }}/web:${{ env.SHORT_SHA }}"
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
         with:
-          registry: ${{ vars.DOCKER_REGISTRY }}
-          username: ${{ secrets.DOCKER_REGISTRY_USER }}
-          password: ${{ secrets.DOCKER_REGISTRY_PASS }}
-      -
-        name: Build and push web
-        uses: docker/build-push-action@v4
-        with:
-          context: apps/web
-          push: true
-          tags: "${{ vars.DOCKER_REGISTRY }}/${{ env.DOCKER_REGISTRY_PATH }}/web:${{ env.SHORT_SHA }}"
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
 
-  deploy:
-    needs: [docker_api, docker_web]
-    runs-on: ubuntu-22.04
-    container: lskjs/kubectl
-    steps:
-      - uses: actions/checkout@v2
-      - name: Add SHORT_SHA env property with commit short sha
-        run: echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
-      - name: Set Kubernetes Context
-        uses: azure/k8s-set-context@v1
-        with:
-          method: kubeconfig
-          kubeconfig: ${{ secrets.KUBE_CONFIG }}
-      - name: env file
-        uses: mobiledevops/secret-to-file-action@v1
-        with:
-          base64-encoded-secret: ${{ secrets.PROD_ENV_FILE }}
-          filename: "prod_env_file"
-          is-executable: false
-          working-directory: "./envs"
-      - name: env js
-        uses: mobiledevops/secret-to-file-action@v1
-        with:
-          base64-encoded-secret: ${{ secrets.PROD_ENV_JS }}
-          filename: "prod_env_js"
-          is-executable: false
-          working-directory: "./envs"
-      - run: kubectl create secret generic prod-kit --from-file=./envs/prod_env_file --from-file=./envs/prod_env_js --save-config --dry-run=client -o yaml | kubectl apply -f -
-      - run: envsubst < deploy/k8s-deploy.yaml > deploy.yaml.${{ env.SHORT_SHA }}
-        env: 
-          APP_NAME: kit3
-          STAGE: prod
-          DOCKER_IMAGE_API: "${{ vars.DOCKER_REGISTRY }}/${{ env.DOCKER_REGISTRY_PATH }}/api:${{ env.SHORT_SHA }}"
-          DOCKER_IMAGE_WEB: "${{ vars.DOCKER_REGISTRY }}/${{ env.DOCKER_REGISTRY_PATH }}/web:${{ env.SHORT_SHA }}"
-      - run: kubectl apply -f ./deploy.yaml.${{ env.SHORT_SHA }}
+      - name: Login to Amazon ECR
+        id: login-ecr
+        run: |
+          aws ecr get-login-password --region ${{ env.AWS_REGION }} | docker login --username AWS --password-stdin 062467975640.dkr.ecr.eu-west-1.amazonaws.com
+
+      - name: Build and tag Docker image
+        run: |
+          docker build -t 062467975640.dkr.ecr.eu-west-1.amazonaws.com/chatterfy:web-${{ github.sha }} .
+          docker tag 062467975640.dkr.ecr.eu-west-1.amazonaws.com/chatterfy:${{ github.sha }} 062467975640.dkr.ecr.eu-west-1.amazonaws.com/chatterfy:web-latest
+
+      - name: Push Docker image to ECR
+        run: |
+          docker push 062467975640.dkr.ecr.eu-west-1.amazonaws.com/chatterfy:web-${{ github.sha }}
+          docker push 062467975640.dkr.ecr.eu-west-1.amazonaws.com/chatterfy:web-latest
+
+  # deploy:
+  #   needs: [docker_api, docker_web]
+  #   runs-on: ubuntu-22.04
+  #   container: lskjs/kubectl
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - name: Add SHORT_SHA env property with commit short sha
+  #       run: echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
+  #     - name: Set Kubernetes Context
+  #       uses: azure/k8s-set-context@v1
+  #       with:
+  #         method: kubeconfig
+  #         kubeconfig: ${{ secrets.KUBE_CONFIG }}
+  #     - name: env file
+  #       uses: mobiledevops/secret-to-file-action@v1
+  #       with:
+  #         base64-encoded-secret: ${{ secrets.PROD_ENV_FILE }}
+  #         filename: "prod_env_file"
+  #         is-executable: false
+  #         working-directory: "./envs"
+  #     - name: env js
+  #       uses: mobiledevops/secret-to-file-action@v1
+  #       with:
+  #         base64-encoded-secret: ${{ secrets.PROD_ENV_JS }}
+  #         filename: "prod_env_js"
+  #         is-executable: false
+  #         working-directory: "./envs"
+  #     - run: kubectl create secret generic prod-kit --from-file=./envs/prod_env_file --from-file=./envs/prod_env_js --save-config --dry-run=client -o yaml | kubectl apply -f -
+  #     - run: envsubst < deploy/k8s-deploy.yaml > deploy.yaml.${{ env.SHORT_SHA }}
+  #       env: 
+  #         APP_NAME: kit3
+  #         STAGE: prod
+  #         DOCKER_IMAGE_API: "${{ vars.DOCKER_REGISTRY }}/${{ env.DOCKER_REGISTRY_PATH }}/api:${{ env.SHORT_SHA }}"
+  #         DOCKER_IMAGE_WEB: "${{ vars.DOCKER_REGISTRY }}/${{ env.DOCKER_REGISTRY_PATH }}/web:${{ env.SHORT_SHA }}"
+  #     - run: kubectl apply -f ./deploy.yaml.${{ env.SHORT_SHA }}
